This was causing some issues with text wrap. In need of some CSS love.

--- a/packages/codemirror/style/index.css
+++ b/packages/codemirror/style/index.css
@@ -72,7 +72,6 @@
   border-top: none;
   border-bottom: 3px solid;
   position: absolute;
-  top: -1px;
   width: 0;
 }
 
